<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fast</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Run Now</item>
        <item>Heart Rate</item>
        <item>Share</item>
        <item>Map</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home_frag</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_action_share</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="userName"></string>
    <string name="miles">Miles</string>
    <string name="thisWeek">This week: </string>
    <string name="thisWeekMiles">No recorded miles</string>
    <string name="lastWeek">Last week: </string>
    <string name="lastWeekMiles">No recorded miles</string>
    <string name="total">Total Distance: </string>
    <string name="totalDistance">0</string>
    <string name="heartRateText">Current Heartrate: </string>
    <string name="averateHeartRateText">Total Average Heartrate: </string>
    <string name="averateHeartRate">0 bpm</string>
    <string name="pedometerText">Number of Steps:</string>
    <string name="pedometerCount">0 steps</string>
    <string name="heartRateStatus">Heart Rate Monitor Status:</string>
    <string name="heartRateCurrentText">Heart Rate Monitor Status:</string>
    <string name="runTime">Run time:</string>
    <string name="run">00:00:00.0</string>
    <string name="distanceLabel">Distance: </string>
    <string name="distance">0</string>
    <string name="speedLabel">Average Speed: </string>
    <string name="speed">0</string>
    <string name="distanceUnits">___miles</string>
    <string name="heartRateCurrent">0 bpm</string>
    <string name="stopButton">Stop</string>
    <string name="startButton">Start</string>
    <string name="endButton">End Run</string>
    <string name="heartRateConnected">Not Connected</string>
	<string name="instant_speed">0</string>
	<string name="instant_speed_title">Instant Speed:</string>
	<string name="heart_rate_title">Heart Rate:</string>
	<string name="battery_title">Battery Percent:</string>
	<string name="status">Not Connected</string>
	<string name="heart_rate">0.0</string>
	<string name="battery">Battery</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="status_unable_to_connect">Unable to Connect</string>
    <string name="status_connected">Connected to HxM</string>
    <string name="status_disconnected">Disconnected from HxM</string>
	<string name="heart_rate_zero">0.0</string>
    <string name="instant_speed_zero">0.0</string>
    <string name="Miles">Miles</string>
    <string name="metric">metric</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_fast_preferences">Preferences</string>
    <string name="userNameTitle">Username:</string>
</resources>