<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="15sp"
        android:gravity="top"
        android:text="@string/userName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="25sp"
        android:paddingLeft="4sp"
        android:text="@string/totalDistance"
        android:textSize="25sp" />

    <!-- <com.google.android.gms.common.SignInButton -->
    <!-- android:id="@+id/sign_in_button" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" /> -->

    <TextView
        android:id="@+id/heartRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/totalDistance"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/averateHeartRateText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/averageHeartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heartRateText"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="15sp"
        android:paddingLeft="4sp"
        android:text="@string/averateHeartRate"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/pedometerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heartRateText"
        android:layout_below="@+id/averageHeartrate"
        android:layout_marginTop="34dp"
        android:text="@string/pedometerText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/pedometerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/averageHeartrate"
        android:layout_below="@+id/pedometerText"
        android:layout_marginTop="17dp"
        android:paddingLeft="4sp"
        android:text="@string/pedometerCount"
        android:textSize="25sp" />

</RelativeLayout>